[package]
name = "ffi"
version = "0.1.0"
authors = ["Aistis Raulinaitis <sheganinans@gmail.com>"]
publish = false
build = "build.rs"

[lib]
name = "ffi"
crate-type = ["dylib"]

# The development profile, used for `cargo build`.
[profile.dev]
opt-level = 0           # controls the `--opt-level` the compiler builds with
debug = true            # controls whether the compiler passes `-g`
rpath = false           # controls whether the compiler passes `-C rpath`
lto = false             # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1       # controls whether the compiler passes `-C codegen-units`
                        # `codegen-units` is ignored when `lto = true`
panic = 'unwind'        # panic strategy (`-C panic=...`), can also be 'abort'


# The release profile, used for `cargo build --release`.
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1
panic = 'unwind'


[dependencies]
rand = "0.3"
urweb = {path = "../", version ="0.1.0"}

[build-dependencies]
rusty-cheddar = "0.3.3"
